--- a/estilo/style.css
+++ b/estilo/style.css
@@ -58,7 +58,7 @@ header > p{
     max-width: 500;
     margin:auto;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.5);
-    margin-bottom: 20px;
+    padding-bottom: 20px;
 }
 nav{
     background-color: var(--cor5);
